--- a/Dragon Quest III (SNES)/Wiki/Dragon Quest III (SNES) - RAM Map.wikitext
+++ b/Dragon Quest III (SNES)/Wiki/Dragon Quest III (SNES) - RAM Map.wikitext
@@ -9,12 +9,14 @@
 !  Category  !!  Address  !! Size  !!  Description
 |-
 |  Stats  ||  $7e3696  ||  long  ||  🪙 Current amount of Gold
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3699-$7e3724  ||  140 bytes   ||  ...
 |-
 |  Bag  ||  $7e3725-$7e3824  ||  256 bytes  ||  📦 Each byte is which item is in bag slot, 0 means empty, game uses values $01-$e4
 |-
 |  Bag  ||  $7e3825-$7e3924  ||  256 bytes  ||  📦 Each byte is amount of the item in the bag slot, game allows up to 99
 |-
-|  Stats  ||  $7e3925  ||  byte  ||  📈 Top 7 bits are Hero's level, bottom bit unknown
+|  Stats  ||  $7e3925  ||  byte  ||  📈 Hero's level, top 7 bits are Hero's level, bottom bit unknown
 |-
 |  Stats  ||  $7e3926-$7e3928  ||  long  ||  📈 Hero's XP
 |-
@@ -34,15 +36,604 @@
 |-
 |  Stats  ||  $7e3934  ||  byte  ||  📈 Hero's wisdom
 |-
-|  Stats  ||  $7e3935  ||  byte  ||  📈 Hero's luck
+|  Stats  ||  $7e3935  ||  byte  ||  📈 Hero's luck, excluding equipment
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3936-$7e393a  ||  5 bytes   ||  ...
 |-
 |  Stats  ||  $7e393b-$7e393f  ||  5 bytes  ||  🏷️ Hero's name, 4 characters max followed by $ac (end of string)
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3940-$7e3948  ||  9 bytes   ||  ...
+|-
+!  colspan="4"  |  
+|-
+|  Spells  ||  $7e3949  ||  0000 0001  ||  Hero - Heal
+|-
+|  Spells  ||  $7e3949  ||  0000 0010  ||  Hero - Antidote
+|-
+|  Spells  ||  $7e3949  ||  0000 0100  ||  Hero - Healmore
+|-
+|  Spells  ||  $7e3949  ||  0000 1000  ||  Hero - Vivify
+|-
+|  Spells  ||  $7e3949  ||  0001 0000  ||  Hero - Healall
+|-
+|  Spells  ||  $7e3949  ||  0010 0000  ||  Hero - Revive
+|-
+|  Spells  ||  $7e3949  ||  0100 0000  ||  Hero - Healus
+|-
+|  Spells  ||  $7e3949  ||  1000 0000  ||  Hero - Healusall
+|-
+!  colspan="4"  |  
+|-
+|  Spells  ||  $7e394a  ||  0000 0001  ||  Hero - Blaze
+|-
+|  Spells  ||  $7e394a  ||  0000 0010  ||  Hero - Fireball
+|-
+|  Spells  ||  $7e394a  ||  0000 0100  ||  Hero - Icebolt
+|-
+|  Spells  ||  $7e394a  ||  0000 1000  ||  Hero - Gale
+|-
+|  Spells  ||  $7e394a  ||  0001 0000  ||  Hero - Beat
+|-
+|  Spells  ||  $7e394a  ||  0010 0000  ||  Hero - Bang
+|-
+|  Spells  ||  $7e394a  ||  0100 0000  ||  Hero - Blazemore
+|-
+|  Spells  ||  $7e394a  ||  1000 0000  ||  Hero - Firebane
+|-
+!  colspan="4"  |  
+|-
+|  Spells  ||  $7e394b  ||  0000 0001  ||  Hero - Snowblast
+|-
+|  Spells  ||  $7e394b  ||  0000 0010  ||  Hero - Tornado
+|-  style="background-color:#eaecf0;"
+|  Spells  ||  $7e394b  ||  0000 0100  ||  Hero - (Nothing!)
+|-
+|  Spells  ||  $7e394b  ||  0000 1000  ||  Hero - Boom
+|-
+|  Spells  ||  $7e394b  ||  0001 0000  ||  Hero - Zap
+|-  style="background-color:#eaecf0;"
+|  Spells  ||  $7e394b  ||  0010 0000  ||  Hero - (Nothing!)
+|-  style="background-color:#eaecf0;"
+|  Spells  ||  $7e394b  ||  0100 0000  ||  Hero - (Nothing!)
+|-
+|  Spells  ||  $7e394b  ||  1000 0000  ||  Hero -  Icespears
+|-
+!  colspan="4"  |  
+|-  style="background-color:#eaecf0;"
+|  Spells  ||  $7e394c  ||  0000 0001  ||  Hero - (Nothing!)
+|-  style="background-color:#eaecf0;"
+|  Spells  ||  $7e394c  ||  0000 0010  ||  Hero - (Nothing!)
+|-  style="background-color:#eaecf0;"
+|  Spells  ||  $7e394c  ||  0000 0100  ||  Hero - (Nothing!)
+|-
+|  Spells  ||  $7e394c  ||  0000 1000  ||  Hero - Lightning
+|-
+|  Spells  ||  $7e394c  ||  0001 0000  ||  Hero - Numboff
+|-
+|  Spells  ||  $7e394c  ||  0010 0000  ||  Hero - Expel
+|-
+|  Spells  ||  $7e394c  ||  0100 0000  ||  Hero - Stopspell
+|-
+|  Spells  ||  $7e394c  ||  1000 0000  ||  Hero - Robmagic
+|-
+!  colspan="4"  |  
+|-
+|  Spells  ||  $7e394d  ||  0000 0001  ||  Hero - Bounce
+|-
+|  Spells  ||  $7e394d  ||  0000 0010  ||  Hero - Slow
+|-
+|  Spells  ||  $7e394d  ||  0000 0100  ||  Hero - Sap
+|-
+|  Spells  ||  $7e394d  ||  0000 1000  ||  Hero - Defense
+|-
+|  Spells  ||  $7e394d  ||  0001 0000  ||  Hero - Upper
+|-
+|  Spells  ||  $7e394d  ||  0010 0000  ||  Hero - Increase
+|-
+|  Spells  ||  $7e394d  ||  0100 0000  ||  Hero - Sleep
+|-
+|  Spells  ||  $7e394d  ||  1000 0000  ||  Hero - Awaken
+|-
+!  colspan="4"  |  
+|-
+|  Spells  ||  $7e394e  ||  0000 0001  ||  Hero - Speed Up
+|-
+|  Spells  ||  $7e394e  ||  0000 0010  ||  Hero - Surround
+|-  style="background-color:#eaecf0;"
+|  Spells  ||  $7e394e  ||  0000 0100  ||  Hero - (Nothing!)
+|-  style="background-color:#eaecf0;"
+|  Spells  ||  $7e394e  ||  0000 1000  ||  Hero - (Nothing!)
+|-
+|  Spells  ||  $7e394e  ||  0001 0000  ||  Hero - Bikill
+|-
+|  Spells  ||  $7e394e  ||  0010 0000  ||  Hero - Ironize
+|-  style="background-color:#eaecf0;"
+|  Spells  ||  $7e394e  ||  0100 0000  ||  Hero - (Nothing!)
+|-  style="background-color:#eaecf0;"
+|  Spells  ||  $7e394e  ||  1000 0000  ||  Hero - (Nothing!)
+|-
+!  colspan="4"  |  
+|-
+|  Spells  ||  $7e394f  ||  0000 0001  ||  Hero - Disperse
+|-  style="background-color:#eaecf0;"
+|  Spells  ||  $7e394f  ||  0000 0010  ||  Hero - (Nothing!)
+|-  style="background-color:#eaecf0;"
+|  Spells  ||  $7e394f  ||  0000 0100  ||  Hero - (Nothing!)
+|-  style="background-color:#eaecf0;"
+|  Spells  ||  $7e394f  ||  0000 1000  ||  Hero - (Nothing!)
+|-
+|  Spells  ||  $7e394f  ||  0001 0000  ||  Hero - Return
+|-
+|  Spells  ||  $7e394f  ||  0010 0000  ||  Hero - Outside
+|-
+|  Spells  ||  $7e394f  ||  0100 0000  ||  Hero - X-Ray
+|-
+|  Spells  ||  $7e394f  ||  1000 0000  ||  Hero - Step Guard
+|-
+!  colspan="6"  |  
+|-
+|  Spells  ||  $7e3950  ||  0000 0001  ||  Hero - Repel
+|-
+|  Spells  ||  $7e3950  ||  0000 0010  ||  Hero - Day-Night
+|-
+|  Spells  ||  $7e3950  ||  0000 0100  ||  Hero - Curseoff
+|-
+|  Spells  ||  $7e3950  ||  0000 1000  ||  Hero - Invisible
+|-
+|  Spells  ||  $7e3950  ||  0001 0000  ||  Hero - Open
+|-
+|  Spells  ||  $7e3950  ||  0010 0000  ||  Hero - Recall
+|-
+|  Spells  ||  $7e3950  ||  0100 0000  ||  Hero - Remember
+|-
+|  Spells  ||  $7e3950  ||  1000 0000  ||  Hero - Retain
+|-
+!  colspan="6"  |  
+|-
+|  Spells  ||  $7e3951  ||  0000 0001  ||  Hero - Forget
+|-
+|  Spells  ||  $7e3951  ||  0000 0010  ||  Hero - Hawk Eye
+|-
+|  Spells  ||  $7e3951  ||  0000 0100  ||  Hero - Location
+|-
+|  Spells  ||  $7e3951  ||  0000 1000  ||  Hero - Tiptoe
+|-
+|  Spells  ||  $7e3951  ||  0001 0000  ||  Hero - ThiefNose
+|-
+|  Spells  ||  $7e3951  ||  0010 0000  ||  Hero - Seek Out
+|-
+|  Spells  ||  $7e3951  ||  0100 0000  ||  Hero - Whistle
+|-
+|  Spells  ||  $7e3951  ||  1000 0000  ||  Hero - Dig Hole
+|-
+!  colspan="6"  |  
+|-
+|  Spells  ||  $7e3952  ||  0000 0001  ||  Hero - Shop Call
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3952  ||  0000 0010  ||  
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3952  ||  0000 0100  ||  
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3952  ||  0000 1000  ||  
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3952  ||  0001 0000  ||  
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3952  ||  0010 0000  ||  
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3952  ||  0100 0000  ||  
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3952  ||  1000 0000  ||  
+|-
+!  colspan="6"  |  
 |-
 |  Bag  ||  $7e3953  ||  byte  ||  📦 Hero's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
 |-
 |  Bag  ||  $7e3954  ||  byte  ||  📦 Hero's bag: Number of items carried, max is $0c
 |-
 |  Bag  ||  $7e3955-$7e3960  ||  12 bytes  ||  📦 Hero's bag: Each byte is which item is in the slot
+|-
+!  colspan="6"  |  
+|-
+|  Stats  ||  $7e3961  ||  byte  ||  📈 Party member #2's level, top 7 bits are level, bottom bit unknown
+|-
+|  Stats  ||  $7e3962-$7e3964  ||  long  ||  📈 Party member #2's XP
+|-
+|  Stats  ||  $7e3965-$7e3966  ||  word  ||  📈 Party member #2's max HP
+|-
+|  Stats  ||  $7e3967-$7e3968 ||  word  ||  📈 Party member #2's current HP
+|-
+|  Stats  ||  $7e3969-$7e396a  ||  word  ||  📈 Party member #2's max MP
+|-
+|  Stats  ||  $7e396b-$7e396c  ||  word  ||  📈 Party member #2's current MP
+|-
+|  Stats  ||  $7e396d  ||  byte  ||  📈 Party member #2's strength
+|-
+|  Stats  ||  $7e396e  ||  byte  ||  📈 Party member #2's agility
+|-
+|  Stats  ||  $7e396f  ||  byte  ||  📈 Party member #2's stamina
+|-
+|  Stats  ||  $7e3970  ||  byte  ||  📈 Party member #2's wisdom
+|-
+|  Stats  ||  $7e3971  ||  byte  ||  📈 Party member #2's luck, excluding equipment
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3972-$7e3976  ||  5 bytes   ||  ...
+|-
+|  Stats  ||  $7e3977-$7e397b  ||  5 bytes  ||  🏷️ Party member #2's name, 4 characters max followed by $ac (end of string)
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e397c-$7e398e  ||  19 bytes   ||  ...
+|-
+|  Bag  ||  $7e398f  ||  byte  ||  📦 Party member #2's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
+|-
+|  Bag  ||  $7e3990  ||  byte  ||  📦 Party member #2's bag: Number of items carried, max is $0c
+|-
+|  Bag  ||  $7e3991-$7e399c  ||  12 bytes  ||  📦 Party member #2's bag: Each byte is which item is in the slot
+|-
+!  colspan="6"  |  
+|-
+|  Stats  ||  $7e399d  ||  byte  ||  📈 Party member #3's level, top 7 bits are level, bottom bit unknown
+|-
+|  Stats  ||  $7e399e-$7e39a0  ||  long  ||  📈 Party member #3's XP
+|-
+|  Stats  ||  $7e39a1-$7e39a2  ||  word  ||  📈 Party member #3's max HP
+|-
+|  Stats  ||  $7e39a3-$7e39a4  ||  word  ||  📈 Party member #3's current HP
+|-
+|  Stats  ||  $7e39a5-$7e39a6  ||  word  ||  📈 Party member #3's max MP
+|-
+|  Stats  ||  $7e39a7-$7e39a8  ||  word  ||  📈 Party member #3's current MP
+|-
+|  Stats  ||  $7e39a9  ||  byte  ||  📈 Party member #3's strength
+|-
+|  Stats  ||  $7e39aa  ||  byte  ||  📈 Party member #3's agility
+|-
+|  Stats  ||  $7e39ab  ||  byte  ||  📈 Party member #3's stamina
+|-
+|  Stats  ||  $7e39ac  ||  byte  ||  📈 Party member #3's wisdom
+|-
+|  Stats  ||  $7e39ad  ||  byte  ||  📈 Party member #3's luck, excluding equipment
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e39ae-$7e39b2  ||  5 bytes   ||  ...
+|-
+|  Stats  ||  $7e39b3-$7e39b7  ||  5 bytes  ||  🏷️ Party member #3's name, 4 characters max followed by $ac (end of string)
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e39b8-$7e39ca  ||  19 bytes   ||  ...
+|-
+|  Bag  ||  $7e39cb  ||  byte  ||  📦 Party member #3's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
+|-
+|  Bag  ||  $7e39cc  ||  byte  ||  📦 Party member #3's bag: Number of items carried, max is $0c
+|-
+|  Bag  ||  $7e39cd-$7e39d8  ||  12 bytes  ||  📦 Party member #3's bag: Each byte is which item is in the slot
+|-
+!  colspan="6"  |  
+|-
+|  Stats  ||  $7e39d9  ||  byte  ||  📈 Party member #4's level, top 7 bits are level, bottom bit unknown
+|-
+|  Stats  ||  $7e39da-$7e39dc  ||  long  ||  📈 Party member #4's XP
+|-
+|  Stats  ||  $7e39dd-$7e39de  ||  word  ||  📈 Party member #4's max HP
+|-
+|  Stats  ||  $7e39df-$7e39e0  ||  word  ||  📈 Party member #4's current HP
+|-
+|  Stats  ||  $7e39e1-$7e39e2  ||  word  ||  📈 Party member #4's max MP
+|-
+|  Stats  ||  $7e39e3-$7e39e4  ||  word  ||  📈 Party member #4's current MP
+|-
+|  Stats  ||  $7e39e5  ||  byte  ||  📈 Party member #4's strength
+|-
+|  Stats  ||  $7e39e6  ||  byte  ||  📈 Party member #4's agility
+|-
+|  Stats  ||  $7e39e7  ||  byte  ||  📈 Party member #4's stamina
+|-
+|  Stats  ||  $7e39e8  ||  byte  ||  📈 Party member #4's wisdom
+|-
+|  Stats  ||  $7e39e9  ||  byte  ||  📈 Party member #4's luck, excluding equipment
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e39ea-$7e39ee  ||  5 bytes   ||  ...
+|-
+|  Stats  ||  $7e39ef-$7e39f3  ||  5 bytes  ||  🏷️ Party member #4's name, 4 characters max followed by $ac (end of string)
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e39f4-$7e3a06  ||  19 bytes   ||  ...
+|-
+|  Bag  ||  $7e3a07  ||  byte  ||  📦 Party member #4's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
+|-
+|  Bag  ||  $7e3a08  ||  byte  ||  📦 Party member #4's bag: Number of items carried, max is $0c
+|-
+|  Bag  ||  $7e3a09-$7e3a14  ||  12 bytes  ||  📦 Party member #4's bag: Each byte is which item is in the slot
+|-
+!  colspan="6"  |  
+|-
+|  Stats  ||  $7e3a15  ||  byte  ||  📈 Party member #5's level, top 7 bits are level, bottom bit unknown
+|-
+|  Stats  ||  $7e3a16-$7e3a18  ||  long  ||  📈 Party member #5's XP
+|-
+|  Stats  ||  $7e3a19-$7e3a1a  ||  word  ||  📈 Party member #5's max HP
+|-
+|  Stats  ||  $7e3a1b-$7e3a1c  ||  word  ||  📈 Party member #5's current HP
+|-
+|  Stats  ||  $7e3a1d-$7e3a1e  ||  word  ||  📈 Party member #5's max MP
+|-
+|  Stats  ||  $7e3a1f-$7e3a20  ||  word  ||  📈 Party member #5's current MP
+|-
+|  Stats  ||  $7e3a21  ||  byte  ||  📈 Party member #5's strength
+|-
+|  Stats  ||  $7e3a22  ||  byte  ||  📈 Party member #5's agility
+|-
+|  Stats  ||  $7e3a23  ||  byte  ||  📈 Party member #5's stamina
+|-
+|  Stats  ||  $7e3a24  ||  byte  ||  📈 Party member #5's wisdom
+|-
+|  Stats  ||  $7e3a25  ||  byte  ||  📈 Party member #5's luck, excluding equipment
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3a26-$7e3a2a  ||  5 bytes   ||  ...
+|-
+|  Stats  ||  $7e3a2b-$7e3a2f  ||  5 bytes  ||  🏷️ Party member #5's name, 4 characters max followed by $ac (end of string)
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3a30-$7e3a42  ||  19 bytes   ||  ...
+|-
+|  Bag  ||  $7e3a43  ||  byte  ||  📦 Party member #5's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
+|-
+|  Bag  ||  $7e3a44  ||  byte  ||  📦 Party member #5's bag: Number of items carried, max is $0c
+|-
+|  Bag  ||  $7e3a45-$7e3a50  ||  12 bytes  ||  📦 Party member #5's bag: Each byte is which item is in the slot
+|-
+!  colspan="6"  |  
+|-
+|  Stats  ||  $7e3a51  ||  byte  ||  📈 Party member #6's level, top 7 bits are level, bottom bit unknown
+|-
+|  Stats  ||  $7e3a52-$7e3a54  ||  long  ||  📈 Party member #6's XP
+|-
+|  Stats  ||  $7e3a55-$7e3a56  ||  word  ||  📈 Party member #6's max HP
+|-
+|  Stats  ||  $7e3a57-$7e3a58  ||  word  ||  📈 Party member #6's current HP
+|-
+|  Stats  ||  $7e3a59-$7e3a5a  ||  word  ||  📈 Party member #6's max MP
+|-
+|  Stats  ||  $7e3a5b-$7e3a5c  ||  word  ||  📈 Party member #6's current MP
+|-
+|  Stats  ||  $7e3a5d  ||  byte  ||  📈 Party member #6's strength
+|-
+|  Stats  ||  $7e3a5e  ||  byte  ||  📈 Party member #6's agility
+|-
+|  Stats  ||  $7e3a5f  ||  byte  ||  📈 Party member #6's stamina
+|-
+|  Stats  ||  $7e3a60  ||  byte  ||  📈 Party member #6's wisdom
+|-
+|  Stats  ||  $7e3a61  ||  byte  ||  📈 Party member #6's luck, excluding equipment
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3a62-$7e3a66  ||  5 bytes   ||  ...
+|-
+|  Stats  ||  $7e3a67-$7e3a6b  ||  5 bytes  ||  🏷️ Party member #6's name, 4 characters max followed by $ac (end of string)
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3a6c-$7e3a7e  ||  19 bytes   ||  ...
+|-
+|  Bag  ||  $7e3a7f  ||  byte  ||  📦 Party member #6's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
+|-
+|  Bag  ||  $7e3a80  ||  byte  ||  📦 Party member #6's bag: Number of items carried, max is $0c
+|-
+|  Bag  ||  $7e3a81-$7e3a8c  ||  12 bytes  ||  📦 Party member #6's bag: Each byte is which item is in the slot
+|-
+!  colspan="6"  |  
+|-
+|  Stats  ||  $7e3a8d  ||  byte  ||  📈 Party member #7's level, top 7 bits are level, bottom bit unknown
+|-
+|  Stats  ||  $7e3a8e-$7e3a90  ||  long  ||  📈 Party member #7's XP
+|-
+|  Stats  ||  $7e3a91-$7e3a92  ||  word  ||  📈 Party member #7's max HP
+|-
+|  Stats  ||  $7e3a93-$7e3a94  ||  word  ||  📈 Party member #7's current HP
+|-
+|  Stats  ||  $7e3a95-$7e3a96  ||  word  ||  📈 Party member #7's max MP
+|-
+|  Stats  ||  $7e3a97-$7e3a98  ||  word  ||  📈 Party member #7's current MP
+|-
+|  Stats  ||  $7e3a99  ||  byte  ||  📈 Party member #7's strength
+|-
+|  Stats  ||  $7e3a9a  ||  byte  ||  📈 Party member #7's agility
+|-
+|  Stats  ||  $7e3a9b  ||  byte  ||  📈 Party member #7's stamina
+|-
+|  Stats  ||  $7e3a9c  ||  byte  ||  📈 Party member #7's wisdom
+|-
+|  Stats  ||  $7e3a9d  ||  byte  ||  📈 Party member #7's luck, excluding equipment
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3a9e-$7e3aa2  ||  5 bytes   ||  ...
+|-
+|  Stats  ||  $7e3aa3-$7e3aa7  ||  5 bytes  ||  🏷️ Party member #7's name, 4 characters max followed by $ac (end of string)
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3aa8-$7e3aba  ||  19 bytes   ||  ...
+|-
+|  Bag  ||  $7e3abb  ||  byte  ||  📦 Party member #7's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
+|-
+|  Bag  ||  $7e3abc  ||  byte  ||  📦 Party member #7's bag: Number of items carried, max is $0c
+|-
+|  Bag  ||  $7e3abd-$7e3ac8  ||  12 bytes  ||  📦 Party member #7's bag: Each byte is which item is in the slot
+|-
+!  colspan="6"  |  
+|-
+|  Stats  ||  $7e3ac9  ||  byte  ||  📈 Party member #8's level, top 7 bits are level, bottom bit unknown
+|-
+|  Stats  ||  $7e3aca-$7e3ac  ||  long  ||  📈 Party member #8's XP
+|-
+|  Stats  ||  $7e3acd-$7e3ace  ||  word  ||  📈 Party member #8's max HP
+|-
+|  Stats  ||  $7e3acf-$7e3ad0  ||  word  ||  📈 Party member #8's current HP
+|-
+|  Stats  ||  $7e3ad1-$7e3ad2  ||  word  ||  📈 Party member #8's max MP
+|-
+|  Stats  ||  $7e3ad3-$7e3ad4  ||  word  ||  📈 Party member #8's current MP
+|-
+|  Stats  ||  $7e3ad5  ||  byte  ||  📈 Party member #8's strength
+|-
+|  Stats  ||  $7e3ad6  ||  byte  ||  📈 Party member #8's agility
+|-
+|  Stats  ||  $7e3ad7  ||  byte  ||  📈 Party member #8's stamina
+|-
+|  Stats  ||  $7e3ad8  ||  byte  ||  📈 Party member #8's wisdom
+|-
+|  Stats  ||  $7e3ad9  ||  byte  ||  📈 Party member #8's luck, excluding equipment
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3ada-$7e3ade  ||  5 bytes   ||  ...
+|-
+|  Stats  ||  $7e3adf-$7e3ae3  ||  5 bytes  ||  🏷️ Party member #8's name, 4 characters max followed by $ac (end of string)
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3ae4-$7e3af6  ||  19 bytes   ||  ...
+|-
+|  Bag  ||  $7e3af7  ||  byte  ||  📦 Party member #8's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
+|-
+|  Bag  ||  $7e3af8  ||  byte  ||  📦 Party member #8's bag: Number of items carried, max is $0c
+|-
+|  Bag  ||  $7e3af9-$7e3b04  ||  12 bytes  ||  📦 Party member #8's bag: Each byte is which item is in the slot
+|-
+!  colspan="6"  |  
+|-
+|  Stats  ||  $7e3b05  ||  byte  ||  📈 Party member #9's level, top 7 bits are level, bottom bit unknown
+|-
+|  Stats  ||  $7e3b06-$7e3b08  ||  long  ||  📈 Party member #9's XP
+|-
+|  Stats  ||  $7e3b09-$7e3b0a  ||  word  ||  📈 Party member #9's max HP
+|-
+|  Stats  ||  $7e3b0b-$7e3b0c  ||  word  ||  📈 Party member #9's current HP
+|-
+|  Stats  ||  $7e3b0d-$7e3b0e  ||  word  ||  📈 Party member #9's max MP
+|-
+|  Stats  ||  $7e3b0f-$7e3b10  ||  word  ||  📈 Party member #9's current MP
+|-
+|  Stats  ||  $7e3b11  ||  byte  ||  📈 Party member #9's strength
+|-
+|  Stats  ||  $7e3b12  ||  byte  ||  📈 Party member #9's agility
+|-
+|  Stats  ||  $7e3b13  ||  byte  ||  📈 Party member #9's stamina
+|-
+|  Stats  ||  $7e3b14  ||  byte  ||  📈 Party member #9's wisdom
+|-
+|  Stats  ||  $7e3b15  ||  byte  ||  📈 Party member #9's luck, excluding equipment
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3b16-$7e3b1a  ||  5 bytes   ||  ...
+|-
+|  Stats  ||  $7e3b1b-$7e3b1f  ||  5 bytes  ||  🏷️ Party member #9's name, 4 characters max followed by $ac (end of string)
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3b20-$7e3b32  ||  19 bytes   ||  ...
+|-
+|  Bag  ||  $7e3b33  ||  byte  ||  📦 Party member #9's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
+|-
+|  Bag  ||  $7e3b34  ||  byte  ||  📦 Party member #9's bag: Number of items carried, max is $0c
+|-
+|  Bag  ||  $7e3b35-$7e3b40  ||  12 bytes  ||  📦 Party member #9's bag: Each byte is which item is in the slot
+|-
+!  colspan="6"  |  
+|-
+|  Stats  ||  $7e3b41  ||  byte  ||  📈 Party member #10's level, top 7 bits are level, bottom bit unknown
+|-
+|  Stats  ||  $7e3b42-$7e3b44  ||  long  ||  📈 Party member #10's XP
+|-
+|  Stats  ||  $7e3b45-$7e3b46  ||  word  ||  📈 Party member #10's max HP
+|-
+|  Stats  ||  $7e3b47-$7e3b48  ||  word  ||  📈 Party member #10's current HP
+|-
+|  Stats  ||  $7e3b49-$7e3b4a  ||  word  ||  📈 Party member #10's max MP
+|-
+|  Stats  ||  $7e3b4b-$7e3b4c  ||  word  ||  📈 Party member #10's current MP
+|-
+|  Stats  ||  $7e3b4d  ||  byte  ||  📈 Party member #10's strength
+|-
+|  Stats  ||  $7e3b4e  ||  byte  ||  📈 Party member #10's agility
+|-
+|  Stats  ||  $7e3b4f  ||  byte  ||  📈 Party member #10's stamina
+|-
+|  Stats  ||  $7e3b50  ||  byte  ||  📈 Party member #10's wisdom
+|-
+|  Stats  ||  $7e3b51  ||  byte  ||  📈 Party member #10's luck, excluding equipment
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3b52-$7e3b56  ||  5 bytes   ||  ...
+|-
+|  Stats  ||  $7e3b57-$7e3b5b  ||  5 bytes  ||  🏷️ Party member #10's name, 4 characters max followed by $ac (end of string)
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3b5c-$7e3b6e  ||  19 bytes   ||  ...
+|-
+|  Bag  ||  $7e3b6f  ||  byte  ||  📦 Party member #10's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
+|-
+|  Bag  ||  $7e3b70  ||  byte  ||  📦 Party member #10's bag: Number of items carried, max is $0c
+|-
+|  Bag  ||  $7e3b71-$7e3b7c  ||  12 bytes  ||  📦 Party member #10's bag: Each byte is which item is in the slot
+|-
+!  colspan="6"  |  
+|-
+|  Stats  ||  $7e3b7d  ||  byte  ||  📈 Party member #11's level, top 7 bits are level, bottom bit unknown
+|-
+|  Stats  ||  $7e3b7e-$7e3b80  ||  long  ||  📈 Party member #11's XP
+|-
+|  Stats  ||  $7e3b81-$7e3b82  ||  word  ||  📈 Party member #11's max HP
+|-
+|  Stats  ||  $7e3b83-$7e3b84  ||  word  ||  📈 Party member #11's current HP
+|-
+|  Stats  ||  $7e3b85-$7e3b86  ||  word  ||  📈 Party member #11's max MP
+|-
+|  Stats  ||  $7e3b87-$7e3b88  ||  word  ||  📈 Party member #11's current MP
+|-
+|  Stats  ||  $7e3b89  ||  byte  ||  📈 Party member #11's strength
+|-
+|  Stats  ||  $7e3b8a  ||  byte  ||  📈 Party member #11's agility
+|-
+|  Stats  ||  $7e3b8b  ||  byte  ||  📈 Party member #11's stamina
+|-
+|  Stats  ||  $7e3b8c  ||  byte  ||  📈 Party member #11's wisdom
+|-
+|  Stats  ||  $7e3b8d  ||  byte  ||  📈 Party member #11's luck, excluding equipment
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3b8e-$7e3b92  ||  5 bytes   ||  ...
+|-
+|  Stats  ||  $7e3b93-$7e3b97  ||  5 bytes  ||  🏷️ Party member #11's name, 4 characters max followed by $ac (end of string)
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3b98-$7e3baa  ||  19 bytes   ||  ...
+|-
+|  Bag  ||  $7e3bab  ||  byte  ||  📦 Party member #11's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
+|-
+|  Bag  ||  $7e3bac  ||  byte  ||  📦 Party member #11's bag: Number of items carried, max is $0c
+|-
+|  Bag  ||  $7e3bad-$7e3bb8  ||  12 bytes  ||  📦 Party member #11's bag: Each byte is which item is in the slot
+|-
+|  Stats  ||  $7e3bb9  ||  byte  ||  📈 Party member #11's level, top 7 bits are level, bottom bit unknown
+|-
+|  Stats  ||  $7e3bba-$7e3bbc  ||  long  ||  📈 Party member #11's XP
+|-
+|  Stats  ||  $7e3bbd-$7e3bbe  ||  word  ||  📈 Party member #11's max HP
+|-
+|  Stats  ||  $7e3bbf-$7e3bc0  ||  word  ||  📈 Party member #11's current HP
+|-
+|  Stats  ||  $7e3bc1-$7e3bc2  ||  word  ||  📈 Party member #11's max MP
+|-
+|  Stats  ||  $7e3bc3-$7e3bc4  ||  word  ||  📈 Party member #11's current MP
+|-
+|  Stats  ||  $7e3bc5  ||  byte  ||  📈 Party member #11's strength
+|-
+|  Stats  ||  $7e3bc6  ||  byte  ||  📈 Party member #11's agility
+|-
+|  Stats  ||  $7e3bc7  ||  byte  ||  📈 Party member #11's stamina
+|-
+|  Stats  ||  $7e3bc8  ||  byte  ||  📈 Party member #11's wisdom
+|-
+|  Stats  ||  $7e3bc9  ||  byte  ||  📈 Party member #11's luck, excluding equipment
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3bca-$7e3bce  ||  5 bytes   ||  ...
+|-
+|  Stats  ||  $7e3bcf-$7e3bd3  ||  5 bytes  ||  🏷️ Party member #11's name, 4 characters max followed by $ac (end of string)
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3bd4-$7e3be6  ||  19 bytes   ||  ...
+|-
+|  Bag  ||  $7e3be7  ||  byte  ||  📦 Party member #11's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
+|-
+|  Bag  ||  $7e3be8  ||  byte  ||  📦 Party member #11's bag: Number of items carried, max is $0c
+|-
+|  Bag  ||  $7e3be9-$7e3bf4  ||  12 bytes  ||  📦 Party member #11's bag: Each byte is which item is in the slot
+|-
+!  colspan="6"  |  
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3bf5-$---  ||  ---   ||  ...
+
+
+
+|-  style="background-color:#eaecf0;"
+|  colspan="4"  |  ...
 |-
 |  Joypad  ||  $7e7ff8  ||  word  ||  🎮 Joypad Buttons - registers $4218 and $4219 are read and stored here
 |}
@@ -128,5 +719,102 @@ The whole graphics state is set every VBLANK interrupt. This is also where VRAM 
 ===Treasures===
 
 [[Dragon Quest III (SNES)/RAM map/Treasures]]
+
+===Return Spell List===
+There are 5 bytes checked in the list, but only 3 are used and the last 2 bytes are gltchy.
+
+{| class="wikitable sortable"
+|-
+!  Category  !!  Address  !!  SRAM  !!  Value  !!  Destination
+|-
+|  Return Spell  ||  $03680  ||  ---  ||  0000 0001  ||  Aliahan
+|-
+|  Return Spell  ||  $03680  ||  ---  ||  0000 0010  ||  Reeve
+|-
+|  Return Spell  ||  $03680  ||  ---  ||  0000 0100  ||  Romaly
+|-
+|  Return Spell  ||  $03680  ||  ---  ||  0000 1000  ||  Kazave
+|-
+|  Return Spell  ||  $03680  ||  ---  ||  0001 0000  ||  Noaniels
+|-
+|  Return Spell  ||  $03680  ||  ---  ||  0010 0000  ||  Ashalam
+|-
+|  Return Spell  ||  $03680  ||  ---  ||  0100 0000  ||  Isis
+|-
+|  Return Spell  ||  $03680  ||  ---  ||  1000 0000  ||  Portoga
+|-
+!  colspan="6"  |  
+|-
+|  Return Spell  ||  $03681  ||  ---  ||  0000 0001  ||  Baharata
+|-
+|  Return Spell  ||  $03681  ||  ---  ||  0000 0010  ||  Dharma
+|-
+|  Return Spell  ||  $03681  ||  ---  ||  0000 0100  ||  Lancel
+|-
+|  Return Spell  ||  $03681  ||  ---  ||  0000 1000  ||  Zipangu
+|-
+|  Return Spell  ||  $03681  ||  ---  ||  0001 0000  ||  Edinbear
+|-
+|  Return Spell  ||  $03681  ||  ---  ||  0010 0000  ||  Samanosa
+|-
+|  Return Spell  ||  $03681  ||  ---  ||  0100 0000  ||  ???
+|-
+|  Return Spell  ||  $03681  ||  ---  ||  1000 0000  ||  Zenithia
+|-
+!  colspan="6"  |  
+|-
+|  Return Spell  ||  $03682  ||  ---  ||  0000 0001  ||  Ludatorm
+|-
+|  Return Spell  ||  $03682  ||  ---  ||  0000 0010  ||  Domdora
+|-
+|  Return Spell  ||  $03682  ||  ---  ||  0000 0100  ||  Mercado
+|-
+|  Return Spell  ||  $03682  ||  ---  ||  0000 1000  ||  Kol
+|-
+|  Return Spell  ||  $03682  ||  ---  ||  0001 0000  ||  Rimuldar
+|-
+|  Return Spell  ||  $03682  ||  ---  ||  0010 0000  ||  X-Burg
+|-
+|  Return Spell  ||  $03682  ||  ---  ||  0100 0000  ||  
+|-
+|  Return Spell  ||  $03682  ||  ---  ||  1000 0000  ||  
+|-
+!  colspan="6"  |  
+|-
+|  Return Spell  ||  $03683  ||  ---  ||  0000 0001  ||  
+|-
+|  Return Spell  ||  $03683  ||  ---  ||  0000 0010  ||  
+|-
+|  Return Spell  ||  $03683  ||  ---  ||  0000 0100  ||  
+|-
+|  Return Spell  ||  $03683  ||  ---  ||  0000 1000  ||  
+|-
+|  Return Spell  ||  $03683  ||  ---  ||  0001 0000  ||  
+|-
+|  Return Spell  ||  $03683  ||  ---  ||  0010 0000  ||  
+|-
+|  Return Spell  ||  $03683  ||  ---  ||  0100 0000  ||  
+|-
+|  Return Spell  ||  $03683  ||  ---  ||  1000 0000  ||  
+|-
+!  colspan="6"  |  
+|-
+|  Return Spell  ||  $03684  ||  ---  ||  0000 0001  ||  
+|-
+|  Return Spell  ||  $03684  ||  ---  ||  0000 0010  ||  
+|-
+|  Return Spell  ||  $03684  ||  ---  ||  0000 0100  ||  
+|-
+|  Return Spell  ||  $03684  ||  ---  ||  0000 1000  ||  
+|-
+|  Return Spell  ||  $03684  ||  ---  ||  0001 0000  ||  
+|-
+|  Return Spell  ||  $03684  ||  ---  ||  0010 0000  ||  
+|-
+|  Return Spell  ||  $03684  ||  ---  ||  0100 0000  ||  
+|-
+|  Return Spell  ||  $03684  ||  ---  ||  1000 0000  ||  
+|}
+
 
 {{Internal Data|game=Dragon Quest III}}
