--- a/Dragon Quest III (SNES)/Wiki/Dragon Quest III (SNES) - RAM Map.wikitext
+++ b/Dragon Quest III (SNES)/Wiki/Dragon Quest III (SNES) - RAM Map.wikitext
@@ -42,189 +42,28 @@
 |-
 |  Stats  ||  $7e393b-$7e393f  ||  5 bytes  ||  🏷️ Hero's name, 4 characters max followed by $ac (end of string)
 |-  style="background-color:#eaecf0;"
-|  ...  ||  $7e3940-$7e3948  ||  9 bytes   ||  ...
+|  ...  ||  $7e3940-$7e3943  ||  4 bytes   ||  ...
 |-
-!  colspan="4"  |  
-|-
-|  Spells  ||  $7e3949  ||  0000 0001  ||  Hero - Heal
-|-
-|  Spells  ||  $7e3949  ||  0000 0010  ||  Hero - Antidote
-|-
-|  Spells  ||  $7e3949  ||  0000 0100  ||  Hero - Healmore
-|-
-|  Spells  ||  $7e3949  ||  0000 1000  ||  Hero - Vivify
-|-
-|  Spells  ||  $7e3949  ||  0001 0000  ||  Hero - Healall
-|-
-|  Spells  ||  $7e3949  ||  0010 0000  ||  Hero - Revive
-|-
-|  Spells  ||  $7e3949  ||  0100 0000  ||  Hero - Healus
-|-
-|  Spells  ||  $7e3949  ||  1000 0000  ||  Hero - Healusall
-|-
-!  colspan="4"  |  
-|-
-|  Spells  ||  $7e394a  ||  0000 0001  ||  Hero - Blaze
-|-
-|  Spells  ||  $7e394a  ||  0000 0010  ||  Hero - Fireball
-|-
-|  Spells  ||  $7e394a  ||  0000 0100  ||  Hero - Icebolt
-|-
-|  Spells  ||  $7e394a  ||  0000 1000  ||  Hero - Gale
-|-
-|  Spells  ||  $7e394a  ||  0001 0000  ||  Hero - Beat
-|-
-|  Spells  ||  $7e394a  ||  0010 0000  ||  Hero - Bang
-|-
-|  Spells  ||  $7e394a  ||  0100 0000  ||  Hero - Blazemore
-|-
-|  Spells  ||  $7e394a  ||  1000 0000  ||  Hero - Firebane
-|-
-!  colspan="4"  |  
-|-
-|  Spells  ||  $7e394b  ||  0000 0001  ||  Hero - Snowblast
-|-
-|  Spells  ||  $7e394b  ||  0000 0010  ||  Hero - Tornado
 |-  style="background-color:#eaecf0;"
-|  Spells  ||  $7e394b  ||  0000 0100  ||  Hero - (Nothing!)
-|-
-|  Spells  ||  $7e394b  ||  0000 1000  ||  Hero - Boom
-|-
-|  Spells  ||  $7e394b  ||  0001 0000  ||  Hero - Zap
+|  Stats  ||  $7e3944  ||  0000 0001  ||  ...
 |-  style="background-color:#eaecf0;"
-|  Spells  ||  $7e394b  ||  0010 0000  ||  Hero - (Nothing!)
+|  Stats  ||  $7e3944  ||  0000 0010  ||  ...
 |-  style="background-color:#eaecf0;"
-|  Spells  ||  $7e394b  ||  0100 0000  ||  Hero - (Nothing!)
-|-
-|  Spells  ||  $7e394b  ||  1000 0000  ||  Hero -  Icespears
-|-
-!  colspan="4"  |  
+|  Stats  ||  $7e3944  ||  0000 0100  ||  ...
 |-  style="background-color:#eaecf0;"
-|  Spells  ||  $7e394c  ||  0000 0001  ||  Hero - (Nothing!)
+|  Stats  ||  $7e3944  ||  0000 1000  ||  ...
 |-  style="background-color:#eaecf0;"
-|  Spells  ||  $7e394c  ||  0000 0010  ||  Hero - (Nothing!)
+|  Stats  ||  $7e3944  ||  0001 0000  ||  ...
+|-
+|  Stats  ||  $7e3944  ||  0010 0000  ||  Hero's Gender - 0: Male, 1: Female
 |-  style="background-color:#eaecf0;"
-|  Spells  ||  $7e394c  ||  0000 0100  ||  Hero - (Nothing!)
-|-
-|  Spells  ||  $7e394c  ||  0000 1000  ||  Hero - Lightning
-|-
-|  Spells  ||  $7e394c  ||  0001 0000  ||  Hero - Numboff
-|-
-|  Spells  ||  $7e394c  ||  0010 0000  ||  Hero - Expel
-|-
-|  Spells  ||  $7e394c  ||  0100 0000  ||  Hero - Stopspell
-|-
-|  Spells  ||  $7e394c  ||  1000 0000  ||  Hero - Robmagic
-|-
-!  colspan="4"  |  
-|-
-|  Spells  ||  $7e394d  ||  0000 0001  ||  Hero - Bounce
-|-
-|  Spells  ||  $7e394d  ||  0000 0010  ||  Hero - Slow
-|-
-|  Spells  ||  $7e394d  ||  0000 0100  ||  Hero - Sap
-|-
-|  Spells  ||  $7e394d  ||  0000 1000  ||  Hero - Defense
-|-
-|  Spells  ||  $7e394d  ||  0001 0000  ||  Hero - Upper
-|-
-|  Spells  ||  $7e394d  ||  0010 0000  ||  Hero - Increase
-|-
-|  Spells  ||  $7e394d  ||  0100 0000  ||  Hero - Sleep
-|-
-|  Spells  ||  $7e394d  ||  1000 0000  ||  Hero - Awaken
-|-
-!  colspan="4"  |  
-|-
-|  Spells  ||  $7e394e  ||  0000 0001  ||  Hero - Speed Up
-|-
-|  Spells  ||  $7e394e  ||  0000 0010  ||  Hero - Surround
+|  Stats  ||  $7e3944  ||  0100 0000  ||  ...
 |-  style="background-color:#eaecf0;"
-|  Spells  ||  $7e394e  ||  0000 0100  ||  Hero - (Nothing!)
+|  Stats  ||  $7e3944  ||  1000 0000  ||  ...
 |-  style="background-color:#eaecf0;"
-|  Spells  ||  $7e394e  ||  0000 1000  ||  Hero - (Nothing!)
+|  ...  ||  $7e3945-$7e3948  ||  4 bytes   ||  ...
 |-
-|  Spells  ||  $7e394e  ||  0001 0000  ||  Hero - Bikill
-|-
-|  Spells  ||  $7e394e  ||  0010 0000  ||  Hero - Ironize
-|-  style="background-color:#eaecf0;"
-|  Spells  ||  $7e394e  ||  0100 0000  ||  Hero - (Nothing!)
-|-  style="background-color:#eaecf0;"
-|  Spells  ||  $7e394e  ||  1000 0000  ||  Hero - (Nothing!)
-|-
-!  colspan="4"  |  
-|-
-|  Spells  ||  $7e394f  ||  0000 0001  ||  Hero - Disperse
-|-  style="background-color:#eaecf0;"
-|  Spells  ||  $7e394f  ||  0000 0010  ||  Hero - (Nothing!)
-|-  style="background-color:#eaecf0;"
-|  Spells  ||  $7e394f  ||  0000 0100  ||  Hero - (Nothing!)
-|-  style="background-color:#eaecf0;"
-|  Spells  ||  $7e394f  ||  0000 1000  ||  Hero - (Nothing!)
-|-
-|  Spells  ||  $7e394f  ||  0001 0000  ||  Hero - Return
-|-
-|  Spells  ||  $7e394f  ||  0010 0000  ||  Hero - Outside
-|-
-|  Spells  ||  $7e394f  ||  0100 0000  ||  Hero - X-Ray
-|-
-|  Spells  ||  $7e394f  ||  1000 0000  ||  Hero - Step Guard
-|-
-!  colspan="6"  |  
-|-
-|  Spells  ||  $7e3950  ||  0000 0001  ||  Hero - Repel
-|-
-|  Spells  ||  $7e3950  ||  0000 0010  ||  Hero - Day-Night
-|-
-|  Spells  ||  $7e3950  ||  0000 0100  ||  Hero - Curseoff
-|-
-|  Spells  ||  $7e3950  ||  0000 1000  ||  Hero - Invisible
-|-
-|  Spells  ||  $7e3950  ||  0001 0000  ||  Hero - Open
-|-
-|  Spells  ||  $7e3950  ||  0010 0000  ||  Hero - Recall
-|-
-|  Spells  ||  $7e3950  ||  0100 0000  ||  Hero - Remember
-|-
-|  Spells  ||  $7e3950  ||  1000 0000  ||  Hero - Retain
-|-
-!  colspan="6"  |  
-|-
-|  Spells  ||  $7e3951  ||  0000 0001  ||  Hero - Forget
-|-
-|  Spells  ||  $7e3951  ||  0000 0010  ||  Hero - Hawk Eye
-|-
-|  Spells  ||  $7e3951  ||  0000 0100  ||  Hero - Location
-|-
-|  Spells  ||  $7e3951  ||  0000 1000  ||  Hero - Tiptoe
-|-
-|  Spells  ||  $7e3951  ||  0001 0000  ||  Hero - ThiefNose
-|-
-|  Spells  ||  $7e3951  ||  0010 0000  ||  Hero - Seek Out
-|-
-|  Spells  ||  $7e3951  ||  0100 0000  ||  Hero - Whistle
-|-
-|  Spells  ||  $7e3951  ||  1000 0000  ||  Hero - Dig Hole
-|-
-!  colspan="6"  |  
-|-
-|  Spells  ||  $7e3952  ||  0000 0001  ||  Hero - Shop Call
-|-  style="background-color:#eaecf0;"
-|  ...  ||  $7e3952  ||  0000 0010  ||  
-|-  style="background-color:#eaecf0;"
-|  ...  ||  $7e3952  ||  0000 0100  ||  
-|-  style="background-color:#eaecf0;"
-|  ...  ||  $7e3952  ||  0000 1000  ||  
-|-  style="background-color:#eaecf0;"
-|  ...  ||  $7e3952  ||  0001 0000  ||  
-|-  style="background-color:#eaecf0;"
-|  ...  ||  $7e3952  ||  0010 0000  ||  
-|-  style="background-color:#eaecf0;"
-|  ...  ||  $7e3952  ||  0100 0000  ||  
-|-  style="background-color:#eaecf0;"
-|  ...  ||  $7e3952  ||  1000 0000  ||  
-|-
-!  colspan="6"  |  
+|  Spells  ||  $7e3949-$7e3952  ||  10 bytes  ||  Hero's [[Dragon Quest III (SNES)/Values/Spells|Spells List]]
 |-
 |  Bag  ||  $7e3953  ||  byte  ||  📦 Hero's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
 |-
@@ -232,7 +71,7 @@
 |-
 |  Bag  ||  $7e3955-$7e3960  ||  12 bytes  ||  📦 Hero's bag: Each byte is which item is in the slot
 |-
-!  colspan="6"  |  
+!  colspan="4"  |  
 |-
 |  Stats  ||  $7e3961  ||  byte  ||  📈 Party member #2's level, top 7 bits are level, bottom bit unknown
 |-
@@ -260,7 +99,9 @@
 |-
 |  Stats  ||  $7e3977-$7e397b  ||  5 bytes  ||  🏷️ Party member #2's name, 4 characters max followed by $ac (end of string)
 |-  style="background-color:#eaecf0;"
-|  ...  ||  $7e397c-$7e398e  ||  19 bytes   ||  ...
+|  ...  ||  $7e397c-$7e3984  ||  9 bytes   ||  ...
+|-
+|  Spells  ||  $7e3985-$7e398e  ||  10 bytes  ||  Party member #2's [[Dragon Quest III (SNES)/Values/Spells|Spells List]]
 |-
 |  Bag  ||  $7e398f  ||  byte  ||  📦 Party member #2's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
 |-
@@ -268,7 +109,7 @@
 |-
 |  Bag  ||  $7e3991-$7e399c  ||  12 bytes  ||  📦 Party member #2's bag: Each byte is which item is in the slot
 |-
-!  colspan="6"  |  
+!  colspan="4"  |  
 |-
 |  Stats  ||  $7e399d  ||  byte  ||  📈 Party member #3's level, top 7 bits are level, bottom bit unknown
 |-
@@ -296,7 +137,9 @@
 |-
 |  Stats  ||  $7e39b3-$7e39b7  ||  5 bytes  ||  🏷️ Party member #3's name, 4 characters max followed by $ac (end of string)
 |-  style="background-color:#eaecf0;"
-|  ...  ||  $7e39b8-$7e39ca  ||  19 bytes   ||  ...
+|  ...  ||  $7e39b8-$7e39c0  ||  9 bytes   ||  ...
+|-
+|  Spells  ||  $7e39c1-$7e39ca  ||  10 bytes  ||  Party member #3's [[Dragon Quest III (SNES)/Values/Spells|Spells List]]
 |-
 |  Bag  ||  $7e39cb  ||  byte  ||  📦 Party member #3's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
 |-
@@ -304,7 +147,7 @@
 |-
 |  Bag  ||  $7e39cd-$7e39d8  ||  12 bytes  ||  📦 Party member #3's bag: Each byte is which item is in the slot
 |-
-!  colspan="6"  |  
+!  colspan="4"  |  
 |-
 |  Stats  ||  $7e39d9  ||  byte  ||  📈 Party member #4's level, top 7 bits are level, bottom bit unknown
 |-
@@ -332,7 +175,9 @@
 |-
 |  Stats  ||  $7e39ef-$7e39f3  ||  5 bytes  ||  🏷️ Party member #4's name, 4 characters max followed by $ac (end of string)
 |-  style="background-color:#eaecf0;"
-|  ...  ||  $7e39f4-$7e3a06  ||  19 bytes   ||  ...
+|  ...  ||  $7e39f4-$7e39fc  ||  9 bytes   ||  ...
+|-
+|  Spells  ||  $7e39fd-$7e3a06  ||  10 bytes  ||  Party member #4's [[Dragon Quest III (SNES)/Values/Spells|Spells List]]
 |-
 |  Bag  ||  $7e3a07  ||  byte  ||  📦 Party member #4's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
 |-
@@ -340,7 +185,7 @@
 |-
 |  Bag  ||  $7e3a09-$7e3a14  ||  12 bytes  ||  📦 Party member #4's bag: Each byte is which item is in the slot
 |-
-!  colspan="6"  |  
+!  colspan="4"  |  
 |-
 |  Stats  ||  $7e3a15  ||  byte  ||  📈 Party member #5's level, top 7 bits are level, bottom bit unknown
 |-
@@ -368,7 +213,9 @@
 |-
 |  Stats  ||  $7e3a2b-$7e3a2f  ||  5 bytes  ||  🏷️ Party member #5's name, 4 characters max followed by $ac (end of string)
 |-  style="background-color:#eaecf0;"
-|  ...  ||  $7e3a30-$7e3a42  ||  19 bytes   ||  ...
+|  ...  ||  $7e3a30-$7e3a38  ||  9 bytes   ||  ...
+|-
+|  Spells  ||  $7e3a39-$7e3a42  ||  10 bytes  ||  Party member #5's [[Dragon Quest III (SNES)/Values/Spells|Spells List]]
 |-
 |  Bag  ||  $7e3a43  ||  byte  ||  📦 Party member #5's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
 |-
@@ -376,7 +223,7 @@
 |-
 |  Bag  ||  $7e3a45-$7e3a50  ||  12 bytes  ||  📦 Party member #5's bag: Each byte is which item is in the slot
 |-
-!  colspan="6"  |  
+!  colspan="4"  |  
 |-
 |  Stats  ||  $7e3a51  ||  byte  ||  📈 Party member #6's level, top 7 bits are level, bottom bit unknown
 |-
@@ -404,7 +251,9 @@
 |-
 |  Stats  ||  $7e3a67-$7e3a6b  ||  5 bytes  ||  🏷️ Party member #6's name, 4 characters max followed by $ac (end of string)
 |-  style="background-color:#eaecf0;"
-|  ...  ||  $7e3a6c-$7e3a7e  ||  19 bytes   ||  ...
+|  ...  ||  $7e3a6c-$7e3a74  ||  9 bytes   ||  ...
+|-
+|  Spells  ||  $7e3a75-$7e3a7e  ||  10 bytes  ||  Party member #6's [[Dragon Quest III (SNES)/Values/Spells|Spells List]]
 |-
 |  Bag  ||  $7e3a7f  ||  byte  ||  📦 Party member #6's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
 |-
@@ -412,7 +261,7 @@
 |-
 |  Bag  ||  $7e3a81-$7e3a8c  ||  12 bytes  ||  📦 Party member #6's bag: Each byte is which item is in the slot
 |-
-!  colspan="6"  |  
+!  colspan="4"  |  
 |-
 |  Stats  ||  $7e3a8d  ||  byte  ||  📈 Party member #7's level, top 7 bits are level, bottom bit unknown
 |-
@@ -440,7 +289,9 @@
 |-
 |  Stats  ||  $7e3aa3-$7e3aa7  ||  5 bytes  ||  🏷️ Party member #7's name, 4 characters max followed by $ac (end of string)
 |-  style="background-color:#eaecf0;"
-|  ...  ||  $7e3aa8-$7e3aba  ||  19 bytes   ||  ...
+|  ...  ||  $7e3aa8-$7e3ab0  ||  9 bytes   ||  ...
+|-
+|  Spells  ||  $7e3ab1-$7e3aba  ||  10 bytes  ||  Party member #7's [[Dragon Quest III (SNES)/Values/Spells|Spells List]]
 |-
 |  Bag  ||  $7e3abb  ||  byte  ||  📦 Party member #7's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
 |-
@@ -448,7 +299,7 @@
 |-
 |  Bag  ||  $7e3abd-$7e3ac8  ||  12 bytes  ||  📦 Party member #7's bag: Each byte is which item is in the slot
 |-
-!  colspan="6"  |  
+!  colspan="4"  |  
 |-
 |  Stats  ||  $7e3ac9  ||  byte  ||  📈 Party member #8's level, top 7 bits are level, bottom bit unknown
 |-
@@ -476,7 +327,9 @@
 |-
 |  Stats  ||  $7e3adf-$7e3ae3  ||  5 bytes  ||  🏷️ Party member #8's name, 4 characters max followed by $ac (end of string)
 |-  style="background-color:#eaecf0;"
-|  ...  ||  $7e3ae4-$7e3af6  ||  19 bytes   ||  ...
+|  ...  ||  $7e3ae4-$7e3aec  ||  9 bytes   ||  ...
+|-
+|  Spells  ||  $7e3aed-$7e3af6  ||  10 bytes  ||  Party member #8's [[Dragon Quest III (SNES)/Values/Spells|Spells List]]
 |-
 |  Bag  ||  $7e3af7  ||  byte  ||  📦 Party member #8's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
 |-
@@ -484,7 +337,7 @@
 |-
 |  Bag  ||  $7e3af9-$7e3b04  ||  12 bytes  ||  📦 Party member #8's bag: Each byte is which item is in the slot
 |-
-!  colspan="6"  |  
+!  colspan="4"  |  
 |-
 |  Stats  ||  $7e3b05  ||  byte  ||  📈 Party member #9's level, top 7 bits are level, bottom bit unknown
 |-
@@ -512,7 +365,9 @@
 |-
 |  Stats  ||  $7e3b1b-$7e3b1f  ||  5 bytes  ||  🏷️ Party member #9's name, 4 characters max followed by $ac (end of string)
 |-  style="background-color:#eaecf0;"
-|  ...  ||  $7e3b20-$7e3b32  ||  19 bytes   ||  ...
+|  ...  ||  $7e3b20-$7e3b28  ||  9 bytes   ||  ...
+|-
+|  Spells  ||  $7e3b29-$7e3b32  ||  10 bytes  ||  Party member #9's [[Dragon Quest III (SNES)/Values/Spells|Spells List]]
 |-
 |  Bag  ||  $7e3b33  ||  byte  ||  📦 Party member #9's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
 |-
@@ -520,7 +375,7 @@
 |-
 |  Bag  ||  $7e3b35-$7e3b40  ||  12 bytes  ||  📦 Party member #9's bag: Each byte is which item is in the slot
 |-
-!  colspan="6"  |  
+!  colspan="4"  |  
 |-
 |  Stats  ||  $7e3b41  ||  byte  ||  📈 Party member #10's level, top 7 bits are level, bottom bit unknown
 |-
@@ -548,7 +403,9 @@
 |-
 |  Stats  ||  $7e3b57-$7e3b5b  ||  5 bytes  ||  🏷️ Party member #10's name, 4 characters max followed by $ac (end of string)
 |-  style="background-color:#eaecf0;"
-|  ...  ||  $7e3b5c-$7e3b6e  ||  19 bytes   ||  ...
+|  ...  ||  $7e3b5c-$7e3b64  ||  9 bytes   ||  ...
+|-
+|  Spells  ||  $7e3b65-$7e3b6e  ||  10 bytes  ||  Party member #10's [[Dragon Quest III (SNES)/Values/Spells|Spells List]]
 |-
 |  Bag  ||  $7e3b6f  ||  byte  ||  📦 Party member #10's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
 |-
@@ -556,7 +413,7 @@
 |-
 |  Bag  ||  $7e3b71-$7e3b7c  ||  12 bytes  ||  📦 Party member #10's bag: Each byte is which item is in the slot
 |-
-!  colspan="6"  |  
+!  colspan="4"  |  
 |-
 |  Stats  ||  $7e3b7d  ||  byte  ||  📈 Party member #11's level, top 7 bits are level, bottom bit unknown
 |-
@@ -584,7 +441,9 @@
 |-
 |  Stats  ||  $7e3b93-$7e3b97  ||  5 bytes  ||  🏷️ Party member #11's name, 4 characters max followed by $ac (end of string)
 |-  style="background-color:#eaecf0;"
-|  ...  ||  $7e3b98-$7e3baa  ||  19 bytes   ||  ...
+|  ...  ||  $7e3b98-$7e3ba0  ||  9 bytes   ||  ...
+|-
+|  Spells  ||  $7e3ba1-$7e3baa  ||  10 bytes  ||  Party member #11's [[Dragon Quest III (SNES)/Values/Spells|Spells List]]
 |-
 |  Bag  ||  $7e3bab  ||  byte  ||  📦 Party member #11's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
 |-
@@ -592,50 +451,201 @@
 |-
 |  Bag  ||  $7e3bad-$7e3bb8  ||  12 bytes  ||  📦 Party member #11's bag: Each byte is which item is in the slot
 |-
-|  Stats  ||  $7e3bb9  ||  byte  ||  📈 Party member #11's level, top 7 bits are level, bottom bit unknown
+!  colspan="4"  |  
 |-
-|  Stats  ||  $7e3bba-$7e3bbc  ||  long  ||  📈 Party member #11's XP
+|  Stats  ||  $7e3bb9  ||  byte  ||  📈 Party member #12's level, top 7 bits are level, bottom bit unknown
 |-
-|  Stats  ||  $7e3bbd-$7e3bbe  ||  word  ||  📈 Party member #11's max HP
+|  Stats  ||  $7e3bba-$7e3bbc  ||  long  ||  📈 Party member #12's XP
 |-
-|  Stats  ||  $7e3bbf-$7e3bc0  ||  word  ||  📈 Party member #11's current HP
+|  Stats  ||  $7e3bbd-$7e3bbe  ||  word  ||  📈 Party member #12's max HP
 |-
-|  Stats  ||  $7e3bc1-$7e3bc2  ||  word  ||  📈 Party member #11's max MP
+|  Stats  ||  $7e3bbf-$7e3bc0  ||  word  ||  📈 Party member #12's current HP
 |-
-|  Stats  ||  $7e3bc3-$7e3bc4  ||  word  ||  📈 Party member #11's current MP
+|  Stats  ||  $7e3bc1-$7e3bc2  ||  word  ||  📈 Party member #12's max MP
 |-
-|  Stats  ||  $7e3bc5  ||  byte  ||  📈 Party member #11's strength
+|  Stats  ||  $7e3bc3-$7e3bc4  ||  word  ||  📈 Party member #12's current MP
 |-
-|  Stats  ||  $7e3bc6  ||  byte  ||  📈 Party member #11's agility
+|  Stats  ||  $7e3bc5  ||  byte  ||  📈 Party member #12's strength
 |-
-|  Stats  ||  $7e3bc7  ||  byte  ||  📈 Party member #11's stamina
+|  Stats  ||  $7e3bc6  ||  byte  ||  📈 Party member #12's agility
 |-
-|  Stats  ||  $7e3bc8  ||  byte  ||  📈 Party member #11's wisdom
+|  Stats  ||  $7e3bc7  ||  byte  ||  📈 Party member #12's stamina
 |-
-|  Stats  ||  $7e3bc9  ||  byte  ||  📈 Party member #11's luck, excluding equipment
+|  Stats  ||  $7e3bc8  ||  byte  ||  📈 Party member #12's wisdom
+|-
+|  Stats  ||  $7e3bc9  ||  byte  ||  📈 Party member #12's luck, excluding equipment
 |-  style="background-color:#eaecf0;"
 |  ...  ||  $7e3bca-$7e3bce  ||  5 bytes   ||  ...
 |-
-|  Stats  ||  $7e3bcf-$7e3bd3  ||  5 bytes  ||  🏷️ Party member #11's name, 4 characters max followed by $ac (end of string)
+|  Stats  ||  $7e3bcf-$7e3bd3  ||  5 bytes  ||  🏷️ Party member #12's name, 4 characters max followed by $ac (end of string)
 |-  style="background-color:#eaecf0;"
-|  ...  ||  $7e3bd4-$7e3be6  ||  19 bytes   ||  ...
+|  ...  ||  $7e3bd4-$7e3bdc  ||  9 bytes   ||  ...
 |-
-|  Bag  ||  $7e3be7  ||  byte  ||  📦 Party member #11's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
+|  Spells  ||  $7e3bdd-$7e3be6  ||  10 bytes  ||  Party member #12's [[Dragon Quest III (SNES)/Values/Spells|Spells List]]
 |-
-|  Bag  ||  $7e3be8  ||  byte  ||  📦 Party member #11's bag: Number of items carried, max is $0c
+|  Bag  ||  $7e3be7  ||  byte  ||  📦 Party member #12's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
 |-
-|  Bag  ||  $7e3be9-$7e3bf4  ||  12 bytes  ||  📦 Party member #11's bag: Each byte is which item is in the slot
+|  Bag  ||  $7e3be8  ||  byte  ||  📦 Party member #12's bag: Number of items carried, max is $0c
 |-
-!  colspan="6"  |  
+|  Bag  ||  $7e3be9-$7e3bf4  ||  12 bytes  ||  📦 Party member #12's bag: Each byte is which item is in the slot
+|-
+!  colspan="4"  |  
+|-
+|  Stats  ||  $7e3bf5  ||  byte  ||  📈 Party member #13's level, top 7 bits are level, bottom bit unknown
+|-
+|  Stats  ||  $7e3bf6-$7e3bf8  ||  long  ||  📈 Party member #13's XP
+|-
+|  Stats  ||  $7e3bf9-$7e3bfa  ||  word  ||  📈 Party member #13's max HP
+|-
+|  Stats  ||  $7e3bfb-$7e3bfc  ||  word  ||  📈 Party member #13's current HP
+|-
+|  Stats  ||  $7e3bfd-$7e3bfe  ||  word  ||  📈 Party member #13's max MP
+|-
+|  Stats  ||  $7e3bff-$7e3c00  ||  word  ||  📈 Party member #13's current MP
+|-
+|  Stats  ||  $7e3c01  ||  byte  ||  📈 Party member #13's strength
+|-
+|  Stats  ||  $7e3c02  ||  byte  ||  📈 Party member #13's agility
+|-
+|  Stats  ||  $7e3c03  ||  byte  ||  📈 Party member #13's stamina
+|-
+|  Stats  ||  $7e3c04  ||  byte  ||  📈 Party member #13's wisdom
+|-
+|  Stats  ||  $7e3c05  ||  byte  ||  📈 Party member #13's luck, excluding equipment
 |-  style="background-color:#eaecf0;"
-|  ...  ||  $7e3bf5-$---  ||  ---   ||  ...
-
-
-
-|-  style="background-color:#eaecf0;"
-|  colspan="4"  |  ...
+|  ...  ||  $7e3c06-$7e3c0a  ||  5 bytes   ||  ...
 |-
-|  Joypad  ||  $7e7ff8  ||  word  ||  🎮 Joypad Buttons - registers $4218 and $4219 are read and stored here
+|  Stats  ||  $7e3c0b-$7e3c0f  ||  5 bytes  ||  🏷️ Party member #13's name, 4 characters max followed by $ac (end of string)
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3c10-$7e3c18  ||  9 bytes   ||  ...
+|-
+|  Spells  ||  $7e3c19-$7e3c22  ||  10 bytes  ||  Party member #13's [[Dragon Quest III (SNES)/Values/Spells|Spells List]]
+|-
+|  Bag  ||  $7e3c23  ||  byte  ||  📦 Party member #13's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
+|-
+|  Bag  ||  $7e3c24  ||  byte  ||  📦 Party member #13's bag: Number of items carried, max is $0c
+|-
+|  Bag  ||  $7e3c25-$7e3c30  ||  12 bytes  ||  📦 Party member #13's bag: Each byte is which item is in the slot
+|-
+!  colspan="4"  |  
+|-
+|  Stats  ||  $7e3c31  ||  byte  ||  📈 Party member #14's level, top 7 bits are level, bottom bit unknown
+|-
+|  Stats  ||  $7e3c32-$7e3c34  ||  long  ||  📈 Party member #14's XP
+|-
+|  Stats  ||  $7e3c35-$7e3c36  ||  word  ||  📈 Party member #14's max HP
+|-
+|  Stats  ||  $7e3c37-$7e3c38  ||  word  ||  📈 Party member #14's current HP
+|-
+|  Stats  ||  $7e3c39-$7e3c3a  ||  word  ||  📈 Party member #14's max MP
+|-
+|  Stats  ||  $7e3c3b-$7e3c3c  ||  word  ||  📈 Party member #14's current MP
+|-
+|  Stats  ||  $7e3c3d  ||  byte  ||  📈 Party member #14's strength
+|-
+|  Stats  ||  $7e3c3e  ||  byte  ||  📈 Party member #14's agility
+|-
+|  Stats  ||  $7e3c3f  ||  byte  ||  📈 Party member #14's stamina
+|-
+|  Stats  ||  $7e3c40  ||  byte  ||  📈 Party member #14's wisdom
+|-
+|  Stats  ||  $7e3c41  ||  byte  ||  📈 Party member #14's luck, excluding equipment
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3c42-$7e3c46  ||  5 bytes   ||  ...
+|-
+|  Stats  ||  $7e3c47-$7e3c4b  ||  5 bytes  ||  🏷️ Party member #14's name, 4 characters max followed by $ac (end of string)
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3c4c-$7e3c54  ||  9 bytes   ||  ...
+|-
+|  Spells  ||  $7e3c55-$7e3c5e  ||  10 bytes  ||  Party member #14's [[Dragon Quest III (SNES)/Values/Spells|Spells List]]
+|-
+|  Bag  ||  $7e3c5f  ||  byte  ||  📦 Party member #14's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
+|-
+|  Bag  ||  $7e3c60  ||  byte  ||  📦 Party member #14's bag: Number of items carried, max is $0c
+|-
+|  Bag  ||  $7e3c61-$7e3c6c  ||  12 bytes  ||  📦 Party member #14's bag: Each byte is which item is in the slot
+|-
+!  colspan="4"  |  
+|-
+|  Stats  ||  $7e3c6d  ||  byte  ||  📈 Party member #15's level, top 7 bits are level, bottom bit unknown
+|-
+|  Stats  ||  $7e3c6e-$7e3c70  ||  long  ||  📈 Party member #15's XP
+|-
+|  Stats  ||  $7e3c71-$7e3c72  ||  word  ||  📈 Party member #15's max HP
+|-
+|  Stats  ||  $7e3c73-$7e3c74  ||  word  ||  📈 Party member #15's current HP
+|-
+|  Stats  ||  $7e3c75-$7e3c76  ||  word  ||  📈 Party member #15's max MP
+|-
+|  Stats  ||  $7e3c77-$7e3c78  ||  word  ||  📈 Party member #15's current MP
+|-
+|  Stats  ||  $7e3c79  ||  byte  ||  📈 Party member #15's strength
+|-
+|  Stats  ||  $7e3c7a  ||  byte  ||  📈 Party member #15's agility
+|-
+|  Stats  ||  $7e3c7b  ||  byte  ||  📈 Party member #15's stamina
+|-
+|  Stats  ||  $7e3c7c  ||  byte  ||  📈 Party member #15's wisdom
+|-
+|  Stats  ||  $7e3c7d  ||  byte  ||  📈 Party member #15's luck, excluding equipment
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3c7e-$7e3c82  ||  5 bytes   ||  ...
+|-
+|  Stats  ||  $7e3c83-$7e3c87  ||  5 bytes  ||  🏷️ Party member #15's name, 4 characters max followed by $ac (end of string)
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3c88-$7e3c90  ||  9 bytes   ||  ...
+|-
+|  Spells  ||  $7e3c91-$7e3c9a  ||  10 bytes  ||  Party member #15's [[Dragon Quest III (SNES)/Values/Spells|Spells List]]
+|-
+|  Bag  ||  $7e3c9b  ||  byte  ||  📦 Party member #15's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
+|-
+|  Bag  ||  $7e3c9c  ||  byte  ||  📦 Party member #15's bag: Number of items carried, max is $0c
+|-
+|  Bag  ||  $7e3c9d-$7e3ca8  ||  12 bytes  ||  📦 Party member #15's bag: Each byte is which item is in the slot
+|-
+!  colspan="4"  |  
+|-
+|  Stats  ||  $7e3ca9  ||  byte  ||  📈 Party member #16's level, top 7 bits are level, bottom bit unknown
+|-
+|  Stats  ||  $7e3caa-$7e3cac  ||  long  ||  📈 Party member #16's XP
+|-
+|  Stats  ||  $7e3cad-$7e3cae  ||  word  ||  📈 Party member #16's max HP
+|-
+|  Stats  ||  $7e3caf-$7e3cb0  ||  word  ||  📈 Party member #16's current HP
+|-
+|  Stats  ||  $7e3cb1-$7e3cb2  ||  word  ||  📈 Party member #16's max MP
+|-
+|  Stats  ||  $7e3cb3-$7e3cb4  ||  word  ||  📈 Party member #16's current MP
+|-
+|  Stats  ||  $7e3cb5  ||  byte  ||  📈 Party member #16's strength
+|-
+|  Stats  ||  $7e3cb6  ||  byte  ||  📈 Party member #16's agility
+|-
+|  Stats  ||  $7e3cb7  ||  byte  ||  📈 Party member #16's stamina
+|-
+|  Stats  ||  $7e3cb8  ||  byte  ||  📈 Party member #16's wisdom
+|-
+|  Stats  ||  $7e3cb9  ||  byte  ||  📈 Party member #16's luck, excluding equipment
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3cba-$7e3cbe  ||  5 bytes   ||  ...
+|-
+|  Stats  ||  $7e3cbf-$7e3cc3  ||  5 bytes  ||  🏷️ Party member #16's name, 4 characters max followed by $ac (end of string)
+|-  style="background-color:#eaecf0;"
+|  ...  ||  $7e3cc4-$7e3ccc  ||  9 bytes   ||  ...
+|-
+|  Spells  ||  $7e3ccd-$7e3cd6  ||  10 bytes  ||  Party member #16's [[Dragon Quest III (SNES)/Values/Spells|Spells List]]
+|-
+|  Bag  ||  $7e3cde  ||  byte  ||  📦 Party member #16's bag: Number of items equipped, equipped items are moved to the top of the bag so only the amount is needed to be saved
+|-
+|  Bag  ||  $7e3cdf  ||  byte  ||  📦 Party member #16's bag: Number of items carried, max is $0c
+|-
+|  Bag  ||  $7e3ce0-$7e3ceb  ||  12 bytes  ||  📦 Party member #16's bag: Each byte is which item is in the slot
+|-
+!  colspan="4"  |  
+|-  style="background-color:#eaecf0;" ca8
+|  ...  ||  $7e3cec-$---  ||  ---   ||  ...
+|-
+|  Joypad  ||  $7e7ff8-$7e7ff9  ||  word  ||  🎮 Joypad Buttons - registers $4218 and $4219 are read and stored here
 |}
 
 ==VBLANK State Machine==
